Xay dung search-input & search-result

--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -22,9 +22,13 @@
 .logo {
 }
 
+.search,
+.search-result {
+  width: 361px;
+}
+
 .search {
   position: relative;
-  width: 361px;
   height: var(--search-height, 46px);
   padding-left: 16px;
   display: flex;
@@ -59,6 +63,13 @@
   &:focus-within {
     border-color: rgba(22, 24, 35, 0.12);
   }
+}
+
+.search-title {
+  padding: 5px 12px;
+  font-size: 1.4rem;
+  font-weight: 600px;
+  color: rgba(22, 24, 35, 0.34);
 }
 
 .clear,
